# passman

./: .gitignore  BUILD_AND_RELEASE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  test_functionality.sh  test_implementation.sh
.github/workflows/: build-cli-linux.yml  build-cli-macos.yml  build-cli-windows.yml  build-cli.yml  build-desktop-linux.yml  build-desktop-macos.yml  build-desktop-windows.yml  build-desktop.yml  release.yml
backend/: Cargo.toml
backend/src/: auth.rs  crypto.rs  generator.rs  lib.rs  models.rs  storage.rs  vault.rs  wordlist.txt
cli/: Cargo.toml
cli/src/: main.rs
desktop/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: ConfirmationModal.tsx  ErrorModal.tsx  Header.tsx  Sidebar.tsx
desktop/src/contexts/: AuthContext.tsx
desktop/src/pages/: AddAccount.tsx  Dashboard.tsx  GeneratePassword.tsx  Login.tsx  Settings.tsx  Setup.tsx  Vaults.tsx
desktop/src/types/: index.ts
frontend/: package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
scripts/: build.sh
website/: .gitignore  package-lock.json  package.json  tailwind.config.js
website/public/: demo.webm
website/src/app/: layout.tsx  page.tsx
website/src/app/about/: page.tsx
website/src/app/api/github/releases/: route.ts
website/src/app/download/: page.tsx
website/src/components/: FeatureCard.tsx  Footer.tsx  LoadingSpinner.tsx  Logo.tsx  Navbar.tsx  Toast.tsx
website/src/lib/: github.ts  utils.ts
website/src/sections/: Demo.tsx  Features.tsx  Hero.tsx
website/src/styles/: globals.css
