[package]
name = "passman-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for PassMan password manager"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true

# Security and encryption
argon2.workspace = true
aes-gcm.workspace = true
rand.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true