[package]
name = "passman-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for PassMan password manager"

[[bin]]
name = "passman"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
passman-backend = { path = "../backend" }
clap.workspace = true
rpassword.workspace = true
clipboard.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# CLI specific dependencies
console.workspace = true
colored.workspace = true